--- a/src/components/base/Head.astro
+++ b/src/components/base/Head.astro
@@ -1,8 +1,7 @@
 ---
-// import { ViewTransitions } from 'astro:transitions'
 import PageTransitions from '../transitions/PageTransitions.astro'
-import { getUrl } from '~/utils/common'
-import { SITE } from '~/config'
+import { getUrl } from '../../utils/common'
+import { SITE } from '../../config'
 
 interface Props {
   title?: string | undefined
