--- a/src/layouts/TabbedLayout.astro
+++ b/src/layouts/TabbedLayout.astro
@@ -1,7 +1,7 @@
 ---
-import { ensureTrailingSlash, getUrl } from '~/utils/common'
-import { UI } from '~/config'
-import type { Tabs } from '~/types'
+import { ensureTrailingSlash, getUrl } from '@/utils/common'
+import { UI } from '@/config'
+import type { Tabs } from '@/types'
 
 interface Props {
   subtitle?: string
